wifi driver 5GHz: add WDS to driver 2.6.0.X

--- a/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.6.0.X/rt2860v2_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.6.0.X/rt2860v2_ap/Makefile
@@ -329,7 +329,7 @@ EXTRA_CFLAGS += -DLLTD_SUPPORT
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_WDS),y)
-#EXTRA_CFLAGS += -DWDS_SUPPORT
+EXTRA_CFLAGS += -DWDS_SUPPORT
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_MBSS),y)
