--- a/trunk/.config
+++ b/trunk/.config
@@ -27,9 +27,9 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-rt3883
 ### Only take effect for "RT-N56U" target.
 #CONFIG_FIRMWARE_USE_SINGLE_RGMII=y
 
-### Use new driver v2.6.0.x for AP 5GHz. Not support WDS yet.
+### Use new driver v2.6.0.x for AP 5GHz.
 ### If unspecified, use old driver v2.4.3.6.
-#CONFIG_FIRMWARE_USE_WIFI5_NEW_DRIVER=y
+CONFIG_FIRMWARE_USE_WIFI5_NEW_DRIVER=y
 
 ### Perform sstrip for decrease firmware size (~50KB)
 #CONFIG_FIRMWARE_PERFORM_SSTRIP=y
