add support WAN traffic measurement with hw_nat usage, add support traffic measurement for AP 2.4GHz on N65U, fix traffic history

--- a/trunk/user/rstats/Makefile
+++ b/trunk/user/rstats/Makefile
@@ -3,14 +3,12 @@ BIN = rstats
 
 CFLAGS += -Wall -s
 CFLAGS += -I../shared -I../shared/include
+CFLAGS += $(if $(CONFIG_RAETH_GMAC2),,-DUSE_SINGLE_MAC)
 
 LDFLAGS += -L../shared -lshared -s
 
 all: ${BIN}
 	${STRIP} ${BIN}
-
-install: all
-	install -D ${BIN} ${INSTALLDIR}/usr/sbin/${BIN}
 
 romfs:
 	$(ROMFSINST) /usr/sbin/rstats
