samba-3.0.37: enable syslog for 8MB flash targets

--- a/trunk/user/samba3/Makefile
+++ b/trunk/user/samba3/Makefile
@@ -4,7 +4,7 @@ SMBCFLAGS = -Wall -ffunction-sections -fdata-sections
 SMBLDFLAGS = -Wl,--gc-sections
 
 ifneq ($(CONFIG_RT2880_FLASH_16M),y)
-SMBCFLAGS += -Os -DMAX_DEBUG_LEVEL="-1"
+SMBCFLAGS += -Os
 else
 SMBCFLAGS += -O2
 endif
