vsftpd: use gcc -Os optimization for 8MB flash targets

--- a/trunk/user/vsftpd/Makefile
+++ b/trunk/user/vsftpd/Makefile
@@ -5,7 +5,12 @@ TOP = $(ROOTDIR)/user
 INSTALL	= install
 IFLAGS  = -idirafter dummyinc
 
-CFLAGS	+= -O2 -Wall -W -Wshadow
+ifneq ($(CONFIG_RT2880_FLASH_16M),y)
+CFLAGS	+= -Os
+else
+CFLAGS	+= -O2
+endif
+CFLAGS	+= -Wall -W -Wshadow
 CFLAGS  += -I$(TOP)/shared -I$(TOP)/shared/include
 CFLAGS	+= -I$(TOP)/libdisk
 CFLAGS	+= -ffunction-sections -fdata-sections
