wifi drivers: enable L2 roaming frame support

--- a/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.4.3.6/rt2860v2_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.4.3.6/rt2860v2_ap/Makefile
@@ -176,7 +176,7 @@ EXTRA_CFLAGS += -DRESOURCE_PRE_ALLOC
 EXTRA_CFLAGS += -DRSSI_FEEDBACK
 
 # provide roaming
-#EXTRA_CFLAGS += -DIAPP_SUPPORT
+EXTRA_CFLAGS += -DIAPP_SUPPORT
 
 ifneq ($(CONFIG_RA_HW_NAT_WIFI),y)
 EXTRA_CFLAGS += -DCONFIG_RA_NAT_NONE
