--- a/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.4.0.5/rt3090_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.4.0.5/rt3090_ap/Makefile
@@ -149,7 +149,7 @@ EXTRA_CFLAGS += -DRTMP_MAC_PCI -DRT30xx -DRT3090 -DRTMP_PCI_SUPPORT -DRTMP_RF_RW
 EXTRA_CFLAGS += -DRSSI_FEEDBACK
 
 # provide roaming
-#EXTRA_CFLAGS += -DIAPP_SUPPORT
+EXTRA_CFLAGS += -DIAPP_SUPPORT
 
 ifneq ($(CONFIG_RA_HW_NAT_WIFI),y)
 EXTRA_CFLAGS += -DCONFIG_RA_NAT_NONE
