--- a/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.5.0.X/rt3090_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.5.0.X/rt3090_ap/Makefile
@@ -131,7 +131,7 @@ EXTRA_CFLAGS += -DRESOURCE_PRE_ALLOC
 EXTRA_CFLAGS += -DRSSI_FEEDBACK
 
 # provide roaming
-#EXTRA_CFLAGS += -DIAPP_SUPPORT
+EXTRA_CFLAGS += -DIAPP_SUPPORT
 
 # for new chips
 #EXTRA_CFLAGS += -DRT33xx -DRT3390 -DRTMP_INTERNAL_TX_ALC
