wifi drivers: add GreenAP feature

--- a/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.4.0.5/rt3090_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.4.0.5/rt3090_ap/Makefile
@@ -180,6 +180,10 @@ endif
 #EXTRA_CFLAGS   += -DRT3XXX_ANTENNA_DIVERSITY_SUPPORT
 #endif
 
+ifeq ($(CONFIG_RT3090_AP_GREENAP),y)
+EXTRA_CFLAGS += -DGREENAP_SUPPORT
+endif
+
 ifeq ($(CONFIG_RT3090_AP_AUTO_CH_SELECT_ENHANCE),y)
 EXTRA_CFLAGS += -DAUTO_CH_SELECT_ENHANCE
 endif
