--- a/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.5.0.X/rt3090_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.5.0.X/rt3090_ap/Makefile
@@ -162,6 +162,10 @@ endif
 #EXTRA_CFLAGS += -DIDS_SUPPORT
 #endif
 
+ifeq ($(CONFIG_RT3090_AP_GREENAP),y)
+EXTRA_CFLAGS += -DGREENAP_SUPPORT
+endif
+
 ifeq ($(CONFIG_RT3090_AP_AUTO_CH_SELECT_ENHANCE),y)
 EXTRA_CFLAGS += -DAUTO_CH_SELECT_ENHANCE
 endif
