project config: rollback WiFi 5GHz driver to 2.4.3.6 with fixes

--- a/trunk/.config
+++ b/trunk/.config
@@ -29,7 +29,7 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-rt3883
 
 ### Use new driver v2.6.0.1 for AP 5GHz.
 ### If unspecified, use old driver v2.4.3.6.
-CONFIG_FIRMWARE_USE_WIFI5_NEW_DRIVER=y
+#CONFIG_FIRMWARE_USE_WIFI5_NEW_DRIVER=y
 
 ### Use new driver v2.5.0.11 for AP 2.4GHz.
 ### If unspecified, use old driver v2.4.0.5.
