transmission: update to v2.77

--- a/trunk/user/transmission/transmission-trunk/gtk/icons/Makefile.in
+++ b/trunk/user/transmission/transmission-trunk/gtk/icons/Makefile.in
@@ -150,7 +150,7 @@ LIBCURL_CFLAGS = @LIBCURL_CFLAGS@
 LIBCURL_LIBS = @LIBCURL_LIBS@
 LIBEVENT_CFLAGS = @LIBEVENT_CFLAGS@
 LIBEVENT_LIBS = @LIBEVENT_LIBS@
-LIBEVENT_MINIUM = @LIBEVENT_MINIUM@
+LIBEVENT_MINIMUM = @LIBEVENT_MINIMUM@
 LIBNATPMP_CFLAGS = @LIBNATPMP_CFLAGS@
 LIBNATPMP_LIBS = @LIBNATPMP_LIBS@
 LIBNATPMP_LIBS_QT = @LIBNATPMP_LIBS_QT@
