rc: move rstats to rc applet, clear NVRAM on ASUS-WRT content detected

--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -49,8 +49,8 @@ LDFLAGS += -L$(SHDIR) -lshared
 
 EXEC = rc
 
-OBJS  = rc.o init.o auth.o services.o watchdog.o firewall_ex.o common_ex.o 
-OBJS += net.o net_lan.o net_wan.o net_wifi.o net_ppp.o services_ex.o 
+OBJS  = rc.o init.o auth.o services.o watchdog.o firewall_ex.o common_ex.o
+OBJS += net.o net_lan.o net_wan.o net_wifi.o net_ppp.o services_ex.o rstats.o
 OBJS += ralink.o rtl8367.o detect_link.o detect_internet.o detect_wan.o usb_devices.o
 ifdef CONFIG_IPV6
 OBJS += net6.o net_lan6.o net_wan6.o
@@ -101,6 +101,7 @@ romfs:
 	cd $(INSTALLDIR)/sbin && ln -sf rc restart_firewall
 	cd $(INSTALLDIR)/sbin && ln -sf rc rtl8367
 	cd $(INSTALLDIR)/sbin && ln -sf rc pids
+	cd $(INSTALLDIR)/sbin && ln -sf rc rstats
 	cd $(INSTALLDIR)/sbin && ln -sf rc restart_wan
 	cd $(INSTALLDIR)/sbin && ln -sf rc restart_networkmap
 	cd $(INSTALLDIR)/sbin && ln -sf rc detect_link
