--- a/trunk/user/xl2tpd/debian/rules
+++ b/trunk/user/xl2tpd/debian/rules
@@ -14,7 +14,7 @@ CFLAGS = -Wall -g
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
 else
-	CFLAGS += -Os
+	CFLAGS += -O2
 endif
 
 configure: configure-stamp
