--- a/trunk/user/xl2tpd/examples/chapsecrets.sample
+++ b/trunk/user/xl2tpd/examples/chapsecrets.sample
@@ -1,7 +1,9 @@
-# Secrets for authentication using CHAP
+# Secrets for authentication on server using CHAP
 # client        server  secret                  IP addresses
-jacco           *       "mysecret"              192.168.1.128/25
-*               jacco   "mysecret"              192.168.1.128/25
-sam             *       "rumpelstiltskin"       192.168.1.5
-*               sam     "rumpelstiltskin"       192.168.1.5
-
+jacco		*	"mysecret"		192.168.1.128/25 # Dynamic IP
+sam		*	"rumpelstiltskin"	192.168.1.5	 # Static IP
+#
+# Secrets for authentication on client using CHAP
+# client	server	secret			IP addresses
+*		jacco	"mysecret"
+*		sam	"rumpelstiltskin"
