wifi driver 5GHz: fix incorrect TxPinCfg register value in GreenAP

--- a/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.6.0.X/rt2860v2_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.6.0.X/rt2860v2_ap/Makefile
@@ -361,7 +361,7 @@ endif
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_GREENAP),y)
-EXTRA_CFLAGS += -DCOC_SUPPORT -DGREENAP_SUPPORT
+EXTRA_CFLAGS += -DGREENAP_SUPPORT
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_EXT_CHANNEL_LIST),y)
