--- a/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.4.3.6/rt2860v2_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.4.3.6/rt2860v2_ap/Makefile
@@ -311,7 +311,7 @@ EXTRA_CFLAGS += -DRT3XXX_ANTENNA_DIVERSITY_SUPPORT
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_GREENAP),y)
-EXTRA_CFLAGS += -DGREENAP_SUPPORT -DCOC_SUPPORT
+EXTRA_CFLAGS += -DGREENAP_SUPPORT
 endif
 
 ifeq ($(CONFIG_RT2860V2_AP_EXT_CHANNEL_LIST),y)
