--- a/trunk/configs/IPv4/RT-N56U/kernel-2.6.21.x.ram.config
+++ b/trunk/configs/IPv4/RT-N56U/kernel-2.6.21.x.ram.config
@@ -398,7 +398,7 @@ CONFIG_IPTABLES_SPEEDUP=y
 CONFIG_NF_NAT_NEEDED=y
 CONFIG_IP_NF_TARGET_MASQUERADE=y
 CONFIG_IP_NF_TARGET_REDIRECT=m
-CONFIG_IP_NF_TARGET_AUTOFW=y
+# CONFIG_IP_NF_TARGET_AUTOFW is not set
 CONFIG_IP_NF_TARGET_NETMAP=y
 # CONFIG_IP_NF_TARGET_SAME is not set
 # CONFIG_NF_NAT_SNMP_BASIC is not set
