--- a/trunk/configs/IPv4/RT-N56U/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/RT-N56U/kernel-3.0.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/mips 3.0.60 Kernel Configuration
+# Linux/mips 3.0.68 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -522,7 +522,7 @@ CONFIG_NF_NAT_NEEDED=y
 CONFIG_IP_NF_TARGET_MASQUERADE=y
 CONFIG_IP_NF_TARGET_NETMAP=y
 CONFIG_IP_NF_TARGET_REDIRECT=m
-CONFIG_IP_NF_TARGET_TRIGGER=y
+# CONFIG_IP_NF_TARGET_TRIGGER is not set
 CONFIG_NF_NAT_PROTO_GRE=m
 CONFIG_NF_NAT_FTP=m
 # CONFIG_NF_NAT_IRC is not set
