add build target for Belkin N750DB board

--- a/trunk/.config
+++ b/trunk/.config
@@ -6,6 +6,7 @@ CONFIG_PRODUCT=RT3883
 CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 #CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
 #CONFIG_FIRMWARE_PRODUCT_ID="SWR1100"
+#CONFIG_FIRMWARE_PRODUCT_ID="BN750DB"
 
 ### Firmware version (X.X.X.X-YYY)
 CONFIG_FIRMWARE_KERNEL_VER="3.0"
