--- a/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.6.0.X/rt2860v2_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.6.0.X/rt2860v2_ap/Makefile
@@ -209,6 +209,9 @@ EXTRA_CFLAGS += -DSTATS_COUNT_SUPPORT -DNEW_TXCONT -DNEW_TXCARRSUPP
 EXTRA_CFLAGS += -DRESOURCE_PRE_ALLOC
 EXTRA_CFLAGS += -DRSSI_FEEDBACK
 
+# use external LNA switch for select 2.4/5GHz via GPIO25
+#EXTRA_CFLAGS += -DBOARD_EXT_SWITCH_LNA_2DOT4_5
+
 # provide roaming
 EXTRA_CFLAGS += -DIAPP_SUPPORT
 
