--- a/trunk/user/httpd/Makefile
+++ b/trunk/user/httpd/Makefile
@@ -28,6 +28,9 @@ endif
 ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"SWR1100")
 CFLAGS += -DBOARD_SWR1100
 endif
+ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"BN750DB")
+CFLAGS += -DBOARD_BN750DB
+endif
 
 ifeq ($(KERNEL3X),y)
 CFLAGS += -DUSE_KERNEL3X
