--- a/trunk/user/shared/Makefile
+++ b/trunk/user/shared/Makefile
@@ -12,6 +12,9 @@ endif
 ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"SWR1100")
 CFLAGS += -DBOARD_SWR1100
 endif
+ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"BN750DB")
+CFLAGS += -DBOARD_BN750DB
+endif
 
 LDFLAGS += -L.
 
