--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -31,6 +31,7 @@ HOSTCC         = gcc
 ROMFSINST      = $(ROOTDIR)/tools/romfs-inst.sh
 TFTPDIR        = /tftpboot
 PATH          := $(PATH):$(ROOTDIR)/tools
+LANG           = en_US.UTF-8
 
 VERSIONSTR     = $(CONFIG_VENDOR)/$(CONFIG_PRODUCT) Version $(VERSIONPKG)
 
@@ -83,7 +84,7 @@ endif
 DIRS = libc libs user
 
 export VENDOR PRODUCT ROOTDIR LINUXDIR KERNEL3X HOSTCC CONFIG_SHELL
-export CONFIG_CONFIG LINUX_CONFIG ROMFSDIR SCRIPTSDIR
+export LANG CONFIG_CONFIG LINUX_CONFIG ROMFSDIR SCRIPTSDIR
 export VERSIONPKG VERSIONSTR ROMFSINST PATH IMAGEDIR RELFILES TFTPDIR
 export KERNEL_HEADERS_PATH CONFIG_CROSS_COMPILER_PATH HOST_NCPU SSTRIP_TOOL
 
