usbnet: add hw_nat offload for RNDIS, NDIS 3G/LTE modems

--- a/trunk/configs/IPv4/RT-N56U/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv4/RT-N56U/kernel-3.0.x.ram.config
@@ -1998,7 +1998,7 @@ CONFIG_RA_HW_NAT_TCP_DLTA=5
 CONFIG_RA_HW_NAT_FIN_DLTA=5
 # CONFIG_RA_HW_NAT_IPV6 is not set
 # CONFIG_RA_HW_NAT_ACL2UP_HELPER is not set
-# CONFIG_RA_HW_NAT_PCI is not set
+CONFIG_RA_HW_NAT_PCI=y
 CONFIG_RA_HW_NAT_WIFI=y
 
 #
