--- a/trunk/configs/IPv6/BN750DB/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv6/BN750DB/kernel-3.0.x.ram.config
@@ -2038,7 +2038,7 @@ CONFIG_RA_HW_NAT_TCP_DLTA=5
 CONFIG_RA_HW_NAT_FIN_DLTA=5
 CONFIG_RA_HW_NAT_IPV6=y
 # CONFIG_RA_HW_NAT_ACL2UP_HELPER is not set
-# CONFIG_RA_HW_NAT_PCI is not set
+CONFIG_RA_HW_NAT_PCI=y
 CONFIG_RA_HW_NAT_WIFI=y
 
 #
