kernel-3.0.x: improve hw_nat code for extif offload

--- a/trunk/linux-3.0.x/net/nat/hw_nat/Makefile
+++ b/trunk/linux-3.0.x/net/nat/hw_nat/Makefile
@@ -12,5 +12,9 @@ hw_nat-objs += mtr_policy.o mtr_ioctl.o
 ### uncomment this flag if you want to send bcast/mcast traffic to PPE instead of CPU
 #EXTRA_CFLAGS += -DHWNAT_MCAST_BCAST_PPE
 
+### uncomment this flag if you want to offload all MBSS interfaces from WiFi
+#EXTRA_CFLAGS += -DHWNAT_MBSS_ALL
+
 ### uncomment this flag if you want to set debug
 #EXTRA_CFLAGS += -DHWNAT_DEBUG
+
