rc: add support LTE modems Huawei E392, E398, E3276 (and many other) in NDIS mode. For correct detection, NDIS/RNDIS mode must be set first in WebUI before modem plug to USB

--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -118,6 +118,7 @@ romfs:
 	cd $(INSTALLDIR)/sbin && ln -sf rc mdev_lp
 	cd $(INSTALLDIR)/sbin && ln -sf rc mdev_net
 	cd $(INSTALLDIR)/sbin && ln -sf rc mdev_tty
+	cd $(INSTALLDIR)/sbin && ln -sf rc mdev_wdm
 	cd $(INSTALLDIR)/sbin && ln -sf rc mdev_usb
 	if [ "$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)" = "y" ] ; then \
 		cd $(INSTALLDIR)/sbin && ln -sf rc run_minidlna ; \
