add gc-sections flag for udpxy, dnsmasq, comgt, usb-modeswitch (shrink image size)

--- a/trunk/user/comgt-0.32/Makefile
+++ b/trunk/user/comgt-0.32/Makefile
@@ -24,8 +24,8 @@
 #
 
 CPROG	= comgt
-CFLAGS  := -c $(CFLAGS)
-LDFLAGS := $(LDFLAGS)
+CFLAGS  := -c $(CFLAGS) -ffunction-sections -fdata-sections
+LDFLAGS := $(LDFLAGS) -Wl,--gc-sections
 
 all: $(CPROG)
 
