--- a/trunk/user/udpxy/Makefile
+++ b/trunk/user/udpxy/Makefile
@@ -29,7 +29,10 @@ GZIP  := /bin/gzip
 MKDEPOPT := -MM
 DEBUG_ON := -g
 
-ALL_CFLAGS = -W -Wall -Werror --pedantic $(CFLAGS) -O2
+ALL_CFLAGS  = -W -Wall -Werror --pedantic $(CFLAGS) -O2
+ALL_CFLAGS += -ffunction-sections -fdata-sections
+
+LDFLAGS += -Wl,--gc-sections
 
 SYSTEM=$(shell uname 2>/dev/null)
 ifeq ($(SYSTEM), FreeBSD)
