--- a/trunk/user/usb-modeswitch/Makefile
+++ b/trunk/user/usb-modeswitch/Makefile
@@ -1,6 +1,7 @@
 PROG        = usb_modeswitch
 VERS        = 1.2.5
-CFLAGS      += -Wall
+CFLAGS     += -Wall -ffunction-sections -fdata-sections
+LDFLAGS    += -Wl,--gc-sections
 LIBS        = -l usb
 RM          = /bin/rm -f
 OBJS        = usb_modeswitch.c
