--- a/trunk/user/dosfstools/dosfstools-3.0.12/Makefile
+++ b/trunk/user/dosfstools/dosfstools-3.0.12/Makefile
@@ -28,7 +28,8 @@ OPTFLAGS = -Os -fomit-frame-pointer -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
 #WARNFLAGS = -Wall -pedantic -std=c99
 WARNFLAGS = -Wall
 DEBUGFLAGS =
-CFLAGS += $(OPTFLAGS) $(WARNFLAGS) $(DEBUGFLAGS)
+CFLAGS += $(OPTFLAGS) $(WARNFLAGS) $(DEBUGFLAGS) -ffunction-sections -fdata-sections
+LDFLAGS += -Wl,--gc-sections
 
 VPATH = src
 
