--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -55,7 +55,7 @@ EXEC = rc
 
 OBJS  = rc.o init.o auth.o services.o watchdog.o firewall_ex.o common_ex.o
 OBJS += net.o net_lan.o net_wan.o net_wifi.o net_ppp.o services_ex.o rstats.o
-OBJS += ralink.o rtl8367.o detect_link.o detect_internet.o detect_wan.o usb_devices.o
+OBJS += ralink.o rtl8367.o detect_link.o detect_internet.o detect_wan.o usb_devices.o usb_modem.o
 ifdef CONFIG_IPV6
 OBJS += net6.o net_lan6.o net_wan6.o
 endif
@@ -119,7 +119,6 @@ romfs:
 	cd $(INSTALLDIR)/sbin && ln -sf rc mdev_net
 	cd $(INSTALLDIR)/sbin && ln -sf rc mdev_tty
 	cd $(INSTALLDIR)/sbin && ln -sf rc mdev_wdm
-	cd $(INSTALLDIR)/sbin && ln -sf rc mdev_usb
 	if [ "$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)" = "y" ] ; then \
 		cd $(INSTALLDIR)/sbin && ln -sf rc run_minidlna ; \
 		cd $(INSTALLDIR)/sbin && ln -sf rc stop_minidlna ; \
