--- a/trunk/user/uqmi/libubox/Makefile
+++ b/trunk/user/uqmi/libubox/Makefile
@@ -1,3 +1,4 @@
+CFLAGS += -DEXT_SIGINT
 TARGET = libubox.a
 
 OBJS = avl.o avl-cmp.o blob.o blobmsg.o uloop.o usock.o ustream.o ustream-fd.o vlist.o utils.o safe_list.o
