kernel-3.0.x: increase SPI flash clock to 40MHz for N65U target

--- a/trunk/configs/IPv4/BN750DB/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/BN750DB/kernel-3.0.x.config
@@ -780,6 +780,7 @@ CONFIG_MTD_RALINK=y
 CONFIG_MTD_SPI_RALINK=y
 # CONFIG_MTD_NAND_RALINK is not set
 # CONFIG_RT2880_FLASH_4M is not set
+# CONFIG_MTD_SPI_FAST_CLOCK is not set
 CONFIG_RT2880_FLASH_8M=y
 # CONFIG_RT2880_FLASH_16M is not set
 CONFIG_MTD_PHYSMAP_BUSWIDTH=2
