--- a/trunk/configs/IPv4/RT-N65U/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv4/RT-N65U/kernel-3.0.x.ram.config
@@ -790,6 +790,7 @@ CONFIG_MTD_RALINK=y
 # CONFIG_MTD_NOR_RALINK is not set
 CONFIG_MTD_SPI_RALINK=y
 # CONFIG_MTD_NAND_RALINK is not set
+CONFIG_MTD_SPI_FAST_CLOCK=y
 # CONFIG_RT2880_FLASH_4M is not set
 # CONFIG_RT2880_FLASH_8M is not set
 CONFIG_RT2880_FLASH_16M=y
