--- a/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.ram.config
@@ -895,7 +895,7 @@ CONFIG_CHR_DEV_SG=y
 CONFIG_SCSI_MULTI_LUN=y
 # CONFIG_SCSI_CONSTANTS is not set
 # CONFIG_SCSI_LOGGING is not set
-CONFIG_SCSI_SCAN_ASYNC=y
+# CONFIG_SCSI_SCAN_ASYNC is not set
 CONFIG_SCSI_WAIT_SCAN=m
 
 #
