project tree: use -Os compiler option for u2ec and 802.1x

--- a/trunk/user/802.1x/Makefile
+++ b/trunk/user/802.1x/Makefile
@@ -22,7 +22,7 @@ endif
 #CC = $(CROSS_COMPILE)gcc
 
 ifndef CFLAGS
-CFLAGS = -O2 -Wall -g
+CFLAGS = -Os -Wall -g
 endif
 
 # If you want to support multiple radius server for multiple bssid, add following line
