--- a/trunk/user/tcpcheck/Makefile
+++ b/trunk/user/tcpcheck/Makefile
@@ -1,14 +1,11 @@
 all: tcpcheck
 
 tcpcheck: tcpcheck.o
-	$(CC) tcpcheck.o -o tcpcheck
+	$(CC) $(CFLAGS) tcpcheck.o -o tcpcheck
 
 clean:
 	rm -f tcpcheck *~ *.o
 
 romfs:
 	$(STRIP) tcpcheck
-#	cp tcpcheck httpdcheck
 	$(ROMFSINST) /usr/sbin/tcpcheck
-#	$(ROMFSINST) /usr/sbin/httpdcheck
-#	cd $(INSTALLDIR)/usr/sbin && ln -sf tcpcheck httpdcheck
