wifi drivers: disable unused IAPP support (ralink roaming)

--- a/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.4.X.X/rt3090_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.4.X.X/rt3090_ap/Makefile
@@ -135,7 +135,7 @@ EXTRA_CFLAGS += -DSTATS_COUNT_SUPPORT
 EXTRA_CFLAGS += -DRSSI_FEEDBACK
 
 # provide roaming
-EXTRA_CFLAGS += -DIAPP_SUPPORT
+#EXTRA_CFLAGS += -DIAPP_SUPPORT
 
 ### RT309X
 EXTRA_CFLAGS += -DRT30xx -DRT3090
