--- a/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.6.X.X/rt2860v2_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.6.X.X/rt2860v2_ap/Makefile
@@ -205,7 +205,7 @@ EXTRA_CFLAGS += -DRSSI_FEEDBACK
 #EXTRA_CFLAGS += -DBOARD_EXT_SWITCH_LNA_2DOT4_5
 
 # provide roaming
-EXTRA_CFLAGS += -DIAPP_SUPPORT
+#EXTRA_CFLAGS += -DIAPP_SUPPORT
 
 ifneq ($(CONFIG_RA_HW_NAT_WIFI),y)
 EXTRA_CFLAGS += -DCONFIG_RA_NAT_NONE
