RT3092 wifi driver 2.7.1.5: allow use VideoTurbine, disable unused eFuse support

--- a/trunk/configs/IPv4/BN750DB/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv4/BN750DB/kernel-3.0.x.ram.config
@@ -1941,6 +1941,7 @@ CONFIG_RT3090_AP_MBSS=y
 CONFIG_RT3090_AP_APCLI=y
 CONFIG_RT3090_AP_IGMP_SNOOP=y
 # CONFIG_RT3090_AP_NETIF_BLOCK is not set
+# CONFIG_RT3090_AP_VIDEO_TURBINE is not set
 CONFIG_RT3090_AP_DLS=y
 CONFIG_RT3090_AP_GREENAP=y
 CONFIG_RT3090_AP_AUTO_CH_SELECT_ENHANCE=y
